Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-7860

Declared properties cannot be assigned in declaration

    XMLWordPrintable

Details

    • 5746327c5566223f01f10f62baf8d7c3e47a6c9f

    Description

      This is currently a syntax error:

      property QtObject a: QtObject {}
      

      it currently needs to be written as:

      property QtObject a
      a: QtObject {}
      

      Both should be allowed.

      There is a test under tests/auto/declarative/qmllanguage/tst_qmllanguage:declaredPropertyValues

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            raggi Roberto Raggi
            aakenned Aaron Kennedy
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes