Fixed: Declared properties cannot be assigned in declaration

Task-number: QTBUG-7860